# Deepline_Server

./: README.md
mcp-server/: checkpoints.py  config.py  config.yaml  debug_test.py  iris_with_predictions.csv  launch_server.py  main.py  pyproject.toml  requirements-exact.txt  server.py  test_eda.py  test_evidently_tools.py  test_server.py  utils.py
mcp-server/mcp_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
